fix: Modify overflow

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -100,7 +100,7 @@ body {
 }
 
 body {
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
   overflow-x: hidden;
 }
 
